Lets give this version a try

--- a/about.html
+++ b/about.html
@@ -262,7 +262,7 @@ $(document).ready(function () {
   <a href="cv.html">
     <span class="fa fa-file-pdf-o"></span>
      
-    CV
+    CV/Research
   </a>
 </li>
       </ul>
@@ -281,6 +281,12 @@ $(document).ready(function () {
     GitHub
   </a>
 </li>
+<li>
+  <a href="https://twitter.com/ipollert">
+    <span class="fa fa-twitter fa"></span>
+     
+  </a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -295,9 +301,14 @@ $(document).ready(function () {
 </div>
 
 
-<div id="header" class="section level2">
-<h2>Header</h2>
-<p>Say more about you here.</p>
+<p>Stuff about me</p>
+<div id="current-work" class="section level3">
+<h3>Current work</h3>
+<p>My Current Work</p>
+</div>
+<div id="hometown-education-research" class="section level3">
+<h3>Hometown – Education – Research</h3>
+<p>Background information/flavor text</p>
 </div>
 
 
