--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ $(document).ready(function () {
   <a href="cv.html">
     <span class="fa fa-file-pdf-o"></span>
      
-    CV
+    CV/Research
   </a>
 </li>
       </ul>
@@ -281,6 +281,12 @@ $(document).ready(function () {
     GitHub
   </a>
 </li>
+<li>
+  <a href="https://twitter.com/ipollert">
+    <span class="fa fa-twitter fa"></span>
+     
+  </a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -295,7 +301,12 @@ $(document).ready(function () {
 </div>
 
 
-<p>Under Consruction</p>
+<p><img src="IsaacPollert.JPG" width="100%" /> ## Bio</p>
+<p>Isaac Pollert is a postdoctoral scholar at Penn State University. He
+specializes in state politics, policy diffusion, and survey research. He
+received his degree from the University of Illinois at Chicago, and his
+dissertation focuses on policy diffusion mechanisms and American
+election policy.</p>
 
 
 
