--- a/cv.html
+++ b/cv.html
@@ -11,7 +11,7 @@
 
 
 
-<title>CV</title>
+<title>CV and Research</title>
 
 <script src="site_libs/header-attrs-2.23/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -262,7 +262,7 @@ $(document).ready(function () {
   <a href="cv.html">
     <span class="fa fa-file-pdf-o"></span>
      
-    CV
+    CV/Research
   </a>
 </li>
       </ul>
@@ -281,6 +281,12 @@ $(document).ready(function () {
     GitHub
   </a>
 </li>
+<li>
+  <a href="https://twitter.com/ipollert">
+    <span class="fa fa-twitter fa"></span>
+     
+  </a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -290,20 +296,20 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">CV</h1>
+<h1 class="title toc-ignore">CV and Research</h1>
 
 </div>
 
 
 <p><a href="CV.pdf#" class="download" title="Download CV as PDF">Download
 CV</a></p>
-<div id="bio" class="section level2">
-<h2>Bio</h2>
-<p>Isaac Pollert is a postdoctoral scholar at Penn State University. He
-specializes in state politics, policy diffusion, and survey research. He
-received his degree from the University of Illinois at Chicago, and his
-dissertation focuses on policy diffusion mechanisms and American
-election policy.</p>
+<div id="working-projects" class="section level3">
+<h3>Working Projects</h3>
+<p>fill in this stuff <br></p>
+</div>
+<div id="teaching-interests" class="section level3">
+<h3>Teaching Interests</h3>
+<p>Fill this in</p>
 </div>
 
 
