--- a/index.html
+++ b/index.html
@@ -301,10 +301,7 @@ $(document).ready(function () {
 </div>
 
 
-<script>
-document.title = "Isaac Pollert"
-</script>
-<p><img src="IsaacPollert.JPG" width="100%" /> ## Bio</p>
+<p><img src="IsaacPollert.jpg" width="100%" /> ## Bio</p>
 <p>Isaac Pollert is a postdoctoral scholar at Penn State University. He
 specializes in state politics, policy diffusion, and survey research. He
 received his degree from the University of Illinois at Chicago, and his
