--- a/index.html
+++ b/index.html
@@ -301,10 +301,10 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="IsaacPollert.jpg" width="100%" /> ## Bio</p>
-<p>Isaac Pollert is a postdoctoral scholar at Penn State University. He
-specializes in state politics, policy diffusion, and survey research. He
-received his degree from the University of Illinois at Chicago, and his
+<p><img src="IsaacPollert.jpg" width="50%" /> ## Bio</p>
+<p>Hello! I am a postdoctoral scholar at Penn State University. I
+specialize in state politics, policy diffusion, and survey research, and
+received my degree from the University of Illinois at Chicago. My
 dissertation focuses on policy diffusion mechanisms and American
 election policy.</p>
 
