--- a/index.html
+++ b/index.html
@@ -301,12 +301,15 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="IsaacPollert.jpg" width="50%" /> ## Bio</p>
+<p><img src="IsaacPollert.jpg" width="33%" /></p>
+<div id="bio" class="section level2">
+<h2>Bio</h2>
 <p>Hello! I am a postdoctoral scholar at Penn State University. I
 specialize in state politics, policy diffusion, and survey research, and
 received my degree from the University of Illinois at Chicago. My
 dissertation focuses on policy diffusion mechanisms and American
 election policy.</p>
+</div>
 
 
 
