--- a/cv.html
+++ b/cv.html
@@ -305,11 +305,44 @@ $(document).ready(function () {
 CV</a></p>
 <div id="working-projects" class="section level3">
 <h3>Working Projects</h3>
-<p>fill in this stuff <br></p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque
+viverra mauris in aliquam sem fringilla ut morbi tincidunt. Mauris
+rhoncus aenean vel elit scelerisque. Ultrices tincidunt arcu non sodales
+neque sodales ut etiam sit. Lacus laoreet non curabitur gravida arcu.
+Facilisi nullam vehicula ipsum a arcu cursus. Volutpat maecenas volutpat
+blandit aliquam etiam erat velit scelerisque. Nibh ipsum consequat nisl
+vel pretium lectus quam. Faucibus ornare suspendisse sed nisi lacus sed.
+Suscipit adipiscing bibendum est ultricies integer quis auctor elit sed.
+Nisl rhoncus mattis rhoncus urna. Quis blandit turpis cursus in hac
+habitasse.</p>
+<p>Blandit aliquam etiam erat velit scelerisque in. Donec massa sapien
+faucibus et molestie ac. Ornare massa eget egestas purus viverra.
+Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere
+lorem. Eu ultrices vitae auctor eu augue ut lectus. A iaculis at erat
+pellentesque. Est velit egestas dui id ornare arcu odio. Enim sit amet
+venenatis urna cursus eget nunc scelerisque viverra. Quis blandit turpis
+cursus in hac habitasse. Erat imperdiet sed euismod nisi porta lorem
+mollis aliquam ut. Adipiscing elit duis tristique sollicitudin. In
+fermentum posuere urna nec tincidunt praesent. Id cursus metus aliquam
+eleifend mi in nulla posuere sollicitudin. Nisi lacus sed viverra tellus
+in hac. Velit scelerisque in dictum non. Sit amet risus nullam eget. Vel
+turpis nunc eget lorem. Vestibulum morbi blandit cursus risus at
+ultrices mi tempus.</p>
 </div>
 <div id="teaching-interests" class="section level3">
 <h3>Teaching Interests</h3>
-<p>Fill this in</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque
+viverra mauris in aliquam sem fringilla ut morbi tincidunt. Mauris
+rhoncus aenean vel elit scelerisque. Ultrices tincidunt arcu non sodales
+neque sodales ut etiam sit. Lacus laoreet non curabitur gravida arcu.
+Facilisi nullam vehicula ipsum a arcu cursus. Volutpat maecenas volutpat
+blandit aliquam etiam erat velit scelerisque. Nibh ipsum consequat nisl
+vel pretium lectus quam. Faucibus ornare suspendisse sed nisi lacus sed.
+Suscipit adipiscing bibendum est ultricies integer quis auctor elit sed.
+Nisl rhoncus mattis rhoncus urna. Quis blandit turpis cursus in hac
+habitasse.</p>
 </div>
 
 
