--- a/about.html
+++ b/about.html
@@ -304,57 +304,28 @@ $(document).ready(function () {
 <p>Stuff about me</p>
 <div id="current-work" class="section level3">
 <h3>Current work</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque
-viverra mauris in aliquam sem fringilla ut morbi tincidunt. Mauris
-rhoncus aenean vel elit scelerisque. Ultrices tincidunt arcu non sodales
-neque sodales ut etiam sit. Lacus laoreet non curabitur gravida arcu.
-Facilisi nullam vehicula ipsum a arcu cursus. Volutpat maecenas volutpat
-blandit aliquam etiam erat velit scelerisque. Nibh ipsum consequat nisl
-vel pretium lectus quam. Faucibus ornare suspendisse sed nisi lacus sed.
-Suscipit adipiscing bibendum est ultricies integer quis auctor elit sed.
-Nisl rhoncus mattis rhoncus urna. Quis blandit turpis cursus in hac
-habitasse.</p>
-<p>Blandit aliquam etiam erat velit scelerisque in. Donec massa sapien
-faucibus et molestie ac. Ornare massa eget egestas purus viverra.
-Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere
-lorem. Eu ultrices vitae auctor eu augue ut lectus. A iaculis at erat
-pellentesque. Est velit egestas dui id ornare arcu odio. Enim sit amet
-venenatis urna cursus eget nunc scelerisque viverra. Quis blandit turpis
-cursus in hac habitasse. Erat imperdiet sed euismod nisi porta lorem
-mollis aliquam ut. Adipiscing elit duis tristique sollicitudin. In
-fermentum posuere urna nec tincidunt praesent. Id cursus metus aliquam
-eleifend mi in nulla posuere sollicitudin. Nisi lacus sed viverra tellus
-in hac. Velit scelerisque in dictum non. Sit amet risus nullam eget. Vel
-turpis nunc eget lorem. Vestibulum morbi blandit cursus risus at
-ultrices mi tempus.</p>
+<p>My current projects are listed below: Secondary Health Effects – I am
+working with a team dedicated to analyzing pandemic era policy decisions
+at the state level and measuring their impacts on health outcomes. This
+project has received seed funding for the total of $10,000, and in it’s
+early stages is focused on health outcomes in infant and young mothers.
+Election Integrity &amp; Public Officials Social Media – this project
+involves understanding how state level officials operate within the
+digital politics sphere. It pays special attention to how state
+lawmakers tweet about elections and election integrity. Election policy
+diffusion – This is an on-going project that measures the diffusion of
+state election policy and the causal forces behind this process. Online
+hate speech by state officials – This project aims to understand how
+lawmakers tweet about their constituents, paying close attention to the
+rise in hate speech and crimes towards AAPI constituents since 2020.</p>
 </div>
 <div id="hometown-education-research" class="section level3">
 <h3>Hometown – Education – Research</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque
-viverra mauris in aliquam sem fringilla ut morbi tincidunt. Mauris
-rhoncus aenean vel elit scelerisque. Ultrices tincidunt arcu non sodales
-neque sodales ut etiam sit. Lacus laoreet non curabitur gravida arcu.
-Facilisi nullam vehicula ipsum a arcu cursus. Volutpat maecenas volutpat
-blandit aliquam etiam erat velit scelerisque. Nibh ipsum consequat nisl
-vel pretium lectus quam. Faucibus ornare suspendisse sed nisi lacus sed.
-Suscipit adipiscing bibendum est ultricies integer quis auctor elit sed.
-Nisl rhoncus mattis rhoncus urna. Quis blandit turpis cursus in hac
-habitasse.</p>
-<p>Blandit aliquam etiam erat velit scelerisque in. Donec massa sapien
-faucibus et molestie ac. Ornare massa eget egestas purus viverra.
-Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere
-lorem. Eu ultrices vitae auctor eu augue ut lectus. A iaculis at erat
-pellentesque. Est velit egestas dui id ornare arcu odio. Enim sit amet
-venenatis urna cursus eget nunc scelerisque viverra. Quis blandit turpis
-cursus in hac habitasse. Erat imperdiet sed euismod nisi porta lorem
-mollis aliquam ut. Adipiscing elit duis tristique sollicitudin. In
-fermentum posuere urna nec tincidunt praesent. Id cursus metus aliquam
-eleifend mi in nulla posuere sollicitudin. Nisi lacus sed viverra tellus
-in hac. Velit scelerisque in dictum non. Sit amet risus nullam eget. Vel
-turpis nunc eget lorem. Vestibulum morbi blandit cursus risus at
-ultrices mi tempus.</p>
+<p>I was born in Columbus Indiana, and graduated from from Colmbus East
+High School. I received my undergad degree from Franklin College in
+Franklin, Indiana in Political Science and Journalism. I received my
+Doctorate in political science from the University of Illinois at
+Chicago in 2022. I currently live in State College, PA.</p>
 </div>
 
 
